--- a/style.css
+++ b/style.css
@@ -1,3 +1,67 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
+.center {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 250px;
+	height: 150px;
+	border-radius: 3px;
+	background: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	flex-direction: column;
+	border:1px solid grey;
+}
+
+.title {
+	width: 100%;
+	height: 50px;
+	text-align: left;
+}
+
+h1 {
+	font-size: 12px;
+	font-weight: 300;
+	color:skyblue;
+}
+
+.dropzone {
+	width: 50px;
+	height: 80px;
+	border-radius: 3px;
+	text-align: center;
+}
+
+.upload-icon {
+	margin: 25px 2px 2px 2px;
+}
+
+.upload-input {
+	position: relative;
+	top: -62px;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+}
+
+.btn {
+	display: block;
+	width: 140px;
+	height: 40px;
+	
+	color: grey;
+
+	border: 0;
+
+	transition: all 0.3s ease-in-out;
+	font-size: 14px;
+}
+
+
+
 *{
     padding: 0%;
     margin: 0%;
@@ -278,4 +342,50 @@ color: rgb(219, 219, 219);
     position: absolute;
     top: 7px;
     left: 264px;
+}
+.carret-project-lead{
+    color: rgb(201, 199, 199)!important;;
+}
+
+
+
+
+
+@import  url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 448 512'%3E%3C!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --%3E%3Cpath d='M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z'/%3E%3C/svg%3E");
+.panel-title > a:before {
+    float: left !important;
+    font-family: FontAwesome;
+    content:"\f068";
+    padding-right: 5px;
+}
+.panel-title > a.collapsed:before {
+    float: left !important;
+    content:"\f067";
+}
+.panel-title > a:hover, 
+.panel-title > a:active, 
+.panel-title > a:focus  {
+    text-decoration:none;
+}
+
+.panel-heading {
+    padding: 0px !important;
+}
+
+.btn-link{
+    text-decoration: none;
+}
+.btn{
+    font-size: 12px;
+
+}
+.center{
+    width: 260px;
+    height: 96px;
+}
+.upload-button{
+    padding-top: 1px;
+}
+.upload-button {
+    margin-top: -12px !important;
 }
