--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     background-color: aliceblue !important;
     overflow-x: hidden;
     color: rgb(151, 149, 149);
+    
 }
 
 .nav {
@@ -58,6 +59,7 @@ body {
 
 .col-7 {
     height: 100%;
+    margin-left: -4px !important;
 }
 
 .middle-items {
@@ -150,16 +152,18 @@ body {
 .sub-header .settings {
     background-color: white !important;
 }
-
-.settings i,
-.settings p {
+.settings i{
     color: black !important;
+}
+.settings .settings-bold{
+    color: black !important;
+    text-decoration: none;
 }
 
 .sub-header a {
     font-size: 11px;
     color: rgb(165, 163, 163) !important;
-    ;
+    
 }
 
 .sub-header i {
@@ -171,7 +175,7 @@ body {
 
 .project-section {
     background-color: white;
-    padding: 5px 0px;
+    padding: 8px 0px 3px 0px;
 }
 
 ul {
@@ -189,15 +193,16 @@ ul {
     margin-left: 7px;
 }
 
-.project a {
+.project .project-text {
     font-size: 12px;
-    text-decoration: none!important;
-    color: rgb(151, 149, 149);
+    text-decoration: none !important;
+    color: rgb(151, 149, 149)!important;
 }
 
 .new-project {
     color: black !important;
     text-decoration: none;
+    font-size: 12px;
 }
 
 .project i {
@@ -207,12 +212,12 @@ ul {
 .side-arrow {
     color: grey;
     font-size: 9px;
-    width: 13px;
-    height: 13px;
-    background-color: lightgray;
+    width: 15px;
+    height: 15px;
+    background-color: rgb(235, 234, 234);
     border-radius: 50%;
     text-align: center;
-    margin: 9px 4px 0px 25px;
+    margin: 7px 4px 0px 25px;
     line-height: 1.5;
 }
 
@@ -221,14 +226,36 @@ ul {
     background-color: white;
     margin-bottom: 0px;
     padding-bottom: 8px;
+    color: gray;
+}
+.form-control{
+    border-radius: 7px !important;
+    box-shadow: none !important;
 }
 
+.side-arrow-parent i{
+    color: gray!important;
+}
 .side-arrow-parent span {
-    color: #2586cb;
+    color: #2586cb !important;
     font-size: 16px;
     margin-left: 3px;
-    margin-top: 5px;
+    margin-top: 3px;
+    text-decoration: none !important;
 }
+a:hover{
+    text-decoration: none !important;
+}
+a:active{
+    text-decoration: none !important;
+}
+a:visited{
+    text-decoration: none !important;
+}
+a:link{
+    text-decoration: none !important;
+}
+
 
 .detail {
     background-color: white;
@@ -249,6 +276,7 @@ ul {
 
 .form-control::placeholder {
     color: rgb(219, 219, 219);
+    font-size: 12px !important;
 }
 
 .accordion-body {
@@ -267,6 +295,7 @@ ul {
 
 .cl-3 {
     margin-top: 13px;
+    width: 25%;
 }
 
 .detail-primary {
@@ -295,14 +324,14 @@ ul {
 .cal-day1 {
     position: absolute;
     top: 72px;
-    left: 274px;
+    left: 308px;
     color: lightgray;
 }
 
 .cal-day2 {
     position: absolute;
     top: 72px;
-    right: 27px;
+    right: 28px;
 }
 
 .column-project-lead {
@@ -385,12 +414,6 @@ h1 {
     color: skyblue;
 }
 
-.dropzone {
-    width: 50px;
-    height: 80px;
-    border-radius: 3px;
-    text-align: center;
-}
 
 .upload-icon {
     margin: 25px 2px 2px 2px;
@@ -417,6 +440,7 @@ h1 {
 .card-all {
     margin: 7px 6px;
     margin-left: px;
+    border-radius: 8px;
     /* border: none !important; */
 }
 
@@ -426,7 +450,7 @@ h1 {
 }
 
 .card-body h5 {
-    color: black;
+    color: #524d4d;
 }
 
 .row {
@@ -481,17 +505,10 @@ a {
     margin-bottom: 30px;
 }
 
-.btn-primary {
-    margin-left: 10px;
-    font-size: 12px !important;
-    text-align: left !important;
-}
 
-button .fa-caret-down {
-    margin-left: 20px;
-    width: 150px;
+.form-control-sm::placeholder{
+    color:#dbd8d8 !important;
 }
-
 .user-related a::before {
     content: '-';
     float: left;
@@ -500,12 +517,50 @@ button .fa-caret-down {
 .user-related a.collapsed::before {
     content: '+';
 }
-
-.card-body-heading a ::after {
+.attach-doc a::before {
     content: '-';
-    float: right;
+    float: left;
+}
+.attach-doc a.collapsed::before {
+    content: '+';
 }
 
-.card-body-heading a.collapsed ::after {
-    content: '+';
+.card-body-heading .main-title ::after {
+    content: "\2303";
+    float: right;
+    color: rgb(80, 142, 235);
+    font-size: 18px;
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
+.card-body-heading .main-title.collapsed ::after {
+    transform: rotate(180deg);
+    color: rgb(80, 142, 235);
+    font-size: 18px;
+    display: inline-block;
+    
+}
+.button-save{
+    padding: 5px 7px !important;
+    font-size:12px !important ;
+    width: 100px !important;
+    margin-left: 8px;
+    margin-right: -3px;
+    border-radius: 5px 0px 0px 5px !important;
+}
+.list-report{
+    border-right: 1px solid lightgray;
+    height: 9px;
+}
+.button-carret{
+    padding: 5px 7px !important;
+    font-size:12px !important ;
+    width: 30px !important;
+    margin-right: 2px;
+    border-radius: 0px 5px 5px 0px !important;
+}
+.form-check-label{
+    color: #acabab;
+    font-weight: 400 !important;
 }
